course part completed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg">
+        <!-- nav part html -->
+        <nav class="navbar navbar-expand-lg py-4">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="img/logo.png" alt="" width="150px">
@@ -59,36 +60,42 @@
             </div>
         </nav>
 
+        <!-- banner carousel html  -->
         <section id="banner">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/b-img1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Ensure Your Better Future</h3>
+                            <h3 class="fw-semibold">Ensure Your Better Future</h3>
                             <p class="my-4">The goal of this online education is understanding and the goal of the
                                 traing later on
                                 this course will be the performance.</p>
-                            <button type="button" class="btn btn-primary">Get Register</button>
+                            <button type="button" class="btn-style py-2 px-4 rounded-1 text-white border-0">Get
+                                Register</button>
 
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/b-img2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Get Started Digital Learning</h3>
+
+                            <h3 class="fw-semibold">Get Started Digital Learning</h3>
                             <p class="my-4">It is a long established fact that a reader will be distracted by the
                                 readable content of
                                 a page when looking at its layout..</p>
-                            <button type="button" class="btn btn-primary">Get Start</button>
+                            <button type="button" class="btn-style py-2 px-4 rounded-1 text-white border-0">Get
+                                Start</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/b-img.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Be certified by world class trainer</h3>
+                            <h3 class="fw-semibold">Be certified by world class trainer</h3>
                             <p class="my-4"> we have trained more than 1200+ student from differnt countries. Now Most
                                 of them are Successful </p>
+                            <button type="button" class="btn-style py-2 px-4 rounded-1 text-white border-0">Join
+                                Now</button>
                         </div>
                     </div>
                 </div>
@@ -102,6 +109,145 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+        </section>
+
+        <!-- courses part html  -->
+        <section id="courses">
+            <header class="text-center mt-5">
+                <h2 class="fw-bolder">Discover Our Popular Courses</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when
+                    looking at its layout.</p>
+            </header>
+            <div class="course-list mt-5">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course1.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Fundamental Of UI/UX Design</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course2.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Fullstack Web Development</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course3.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Photography Basic Rules</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course4.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Motion Graphics</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course5.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Javascript Basic to advanced</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="course-details border rounded-1 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="img/course6.png" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-md-8">
+                                    <h4 class="fw-bolder mt-3">Digital Marketing</h5>
+                                        <p class="my-3">Some quick example text to build on the card title and make up
+                                            the bulk ofthe card. </p>
+                                        <p class="text-info fw-semibold">Price : 20$ </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="more-course-btn text-center">
+                    <button type="button" class=" btn-style py-2 px-4 rounded-1 text-white border-0">See More
+                        Courses</button>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="mt-5 " id="e-learning-info">
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="img/info.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-7 d-flex flex-column justify-content-center">
+                    <h1 class="fw-bolder">Explore The elearning Institute</h1>
+                    <p class="mt-5 para">There are many variations of passages of Lorem Ipsum available, but the
+                        majority
+                        have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem Ipsum, you need to be sure. <br><br>
+
+                        Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                        Internet tend to repeat predefined.</p>
+                    <div class="more-info d-flex mt-5">
+                        <div class="">
+                            <h2 class="fw-bolder">3.2K+</h2>
+                            <span>Online Courses</span>
+                        </div>
+                        <div class="">
+                            <h2 class="fw-bolder">600+</h2>
+                            <span>Expert members</span>
+                        </div>
+                        <div class="">
+                            <h2 class="fw-bolder">1K+</h2>
+                            <span>Rating & Review</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
