--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <div class="card-body">
                             <h5 class="card-title fw-semibold">Dipto dey</h5>
                             <p class="card-text p-color">Real Life PhotoGrapher. Working As a senior wildlife
-                                photographer in NTV</p>
+                                photographer in NTV channel</p>
                         </div>
                     </div>
                 </div>
